--- a/final.css
+++ b/final.css
@@ -14,6 +14,13 @@ body {
     place-items: center;
     margin-top: 100px;
 }
+.sync h1 {
+    font-size: 20px;
+}
+.fa {
+    color: red;
+    font-size: 10px;
+}
 .syncwal {
     display: flex;
     justify-content: center;
